<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.score.ScoreFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/score_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:backgroundTint="?attr/colorSurface"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998">

        <ImageView
            android:id="@+id/iv_renda"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_iv_renda" />

        <TextView
            android:id="@+id/tv_scorer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/tv_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:fontFamily="@font/montserrat_alternates"
            android:padding="8dp"
            android:text="@string/correct_s"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:fontFamily="@font/montserrat_alternates"
            android:padding="8dp"
            android:text="@string/wrong_s"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_hand_left"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_layout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_hand_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingVertical="10dp"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintEnd_toEndOf="@id/imageView"/>

</androidx.constraintlayout.widget.ConstraintLayout>