<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.setting.SettingFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drak_mode"
        android:fontFamily="@font/montserrat_alternates"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toTopOf="@id/switch_dark_mode"
        app:layout_constraintStart_toEndOf="@id/switch_dark_mode"
        app:layout_constraintBottom_toBottomOf="@id/switch_dark_mode"
        android:layout_marginStart="32dp"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/switch_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_username_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@android:color/darker_gray"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_change_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:hint="@string/change_username"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="?android:attr/textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingVertical="10dp"
        android:text="@string/save"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/edt_username_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_username_layout"/>



</androidx.constraintlayout.widget.ConstraintLayout>