<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.quiz.QuizFragment">


    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:max="5"
        android:paddingHorizontal="8dp"
        android:progress="0"
        android:progressBackgroundTint="@color/blue_light"
        android:progressTint="@color/blue"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/question_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_alternates"
            android:gravity="center_vertical|center_horizontal"
            android:padding="16dp"
            android:text="@string/dummy_question"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_cancel"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:maxLines="2"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/dummy_answer"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_layout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_cancel"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:maxLines="2"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/dummy_answer"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_cancel"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:maxLines="2"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/dummy_answer"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_cancel"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:maxLines="2"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="16dp"
        android:text="@string/dummy_answer"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_login"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:paddingVertical="10dp"
        android:text="@string/go"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/option_4"
        app:layout_constraintStart_toStartOf="@id/option_4"
        app:layout_constraintTop_toBottomOf="@id/option_4" />

</androidx.constraintlayout.widget.ConstraintLayout>